<resources>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="app_name">京东酒世界</string>
    <!--<string name="app_test">美农伙伴测试</string>-->
    <string name="app_default"></string>
<!--    <string name="app_default">京东酒世界</string>-->
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
    <string name="main_runjing_search">搜索</string>
    <string name="search_goods">搜索店内商品</string>
    <string name="dialog_left_botton">取消</string>
    <string name="dialog_right_botton">确定</string>
    <string name="app_print">打印</string>
    <string name="app_print_default">设为默认打印机</string>
    <string name="app_loginout_toast">登出成功</string>
    <string name="app_shipped_select_msg">结束时间大于等于起始时间</string>
    <string name="act_login_phone">请输入您的手机号码</string>
    <string name="act_login_pwd">请输入您的登录密码</string>
    <string name="act_login_submit">登录</string>
    <string name="forget_pwd">请联系后台管理员重置密码</string>

    <string name="login_et_name">手机号/账号/邮箱</string>
    <string name="login_et_password">密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="login">登陆</string>
    <string name="login_account_entry">请输入账号</string>
    <string name="login_phone_error">请输入正确手机号</string>
    <string name="login_email_error">请输入正确邮箱</string>
    <string name="login_pwd_error">请输入正确密码</string>
    <string name="one_more">在按一次退出</string>
    <string name="main_home">首页</string>
    <string name="main_category">分类</string>
    <string name="main_order">订单</string>
    <string name="main_mine">我的</string>
    <string name="load_refresh">下拉刷新</string>
    <string name="load_more">努力记载中...</string>
    <string name="home_quick_order">快接下单</string>
    <string name="home_zt">自提/外送 天天买好酒</string>
    <string name="home_nextstore">附近门店</string>
    <string name="home_order_time">下单买酒29分送达</string>
    <string name="home_coin">我的酒币</string>
    <string name="home_one_one">1酒币抵用一元钱</string>
    <string name="home_service_error">很抱歉，您所在城市未开通29分钟送达服务</string>
    <string name="home_service_open">已开通29分钟送达服务</string>
    <string name="home_no_network">您的网络好像不太给力</string>
    <string name="home_refresh">重新加载</string>
    <string name="home_local_refuse">定位服务已经关闭</string>
    <string name="home_local_set">请到-设置-定位服务中开启</string>
    <string name="home_local_msg">【京东酒世界】定位服务，以便您获取到附近门店信息</string>
    <string name="home_manual">手动选择</string>
    <string name="home_local_start">开启定位</string>
    <string name="home_salf">售后无忧</string>
    <string name="home_quality">品质保证</string>
    <string name="home_speed">极速送达</string>
    <string name="home_search_msg">想喝点什么？搜一搜</string>
    <string name="home_no_local">无法获取地址</string>
    <string name="search_local">请输入酒品关键词</string>
    <string name="search">搜索</string>
    <string name="search_history">历史记录</string>
    <string name="search_hot">热门搜索</string>
    <string name="select_local">选择</string>
    <string name="my_receive_address">我的收货地址</string>
    <string name="my_near_address">附近地址</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rv_footer_tv">努力加载中…</string>
    <string name="rv_footer_nomore">没有更多了</string>
    <string name="store_rest">本店已休息</string>
    <string name="store_distance">距离：</string>
    <string name="store_view">进门店逛逛</string>
    <string name="string_navigation">导航</string>
    <string name="string_experience">马上体验</string>
    <string name="phone_quick">手机号快捷登陆</string>
    <string name="phone_ap">账号密码登陆</string>
    <string name="phone_start">+86</string>
    <string name="phone_input">请输入手机号</string>
    <string name="phone_number">0123456789</string>
    <string name="phone_number_pwd">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.+-*/%\n()!_+=</string>
    <string name="phone_code">请输入短信验证码</string>
    <string name="phone_stare_code">发送验证码</string>
    <string name="account_no_registmsg">未注册过的手机号将自动注册为京东酒世界</string>
    <string name="account_name">京东账号（用户名/邮箱/手机号）</string>
    <string name="account_pwd">请输入密码</string>
    <string name="account_forget">忘记密码</string>
    <string name="pwd_toast">密码由8-20位字母、数字或半角符号组成，不能是10位以下纯数字/ 字母/半角符号，字母需要区分大小写</string>
    <string name="pwd_finish">完成</string>
    <string name="login_isagree">已阅读并同意《京东用户协议》、《京东隐私政策》、《京东酒世界用户协议》</string>
    <string name="login_isagree_next">已阅读并同意</string>
    <string name="login_isagree_last">《京东用户协议》、《京东隐私政策》、《京东酒世界用户协议》</string>
    <string name="tag_yes">true</string>
    <string name="tag_no">false</string>
    <string name="pwd_formit">请设置为8-20位字符</string>
    <string name="good_name">商品</string>
    <string name="good_detail">详情</string>
    <string name="snakill_finish">秒杀倒计时结束</string>
    <string name="string_Discount">优惠</string>
    <string name="string_min29">29分钟送达</string>
    <string name="string_man">慢必赔</string>
    <string name="string_all">全程溯源</string>
    <string name="string_quity">配置保证</string>
    <string name="string_severn">不支持7天无理由退货</string>
    <string name="string_service">服务</string>
    <string name="string_intostore">进店逛逛</string>
    <string name="string_gooddetail">商品详情</string>
    <string name="string_seckill">秒杀</string>
    <string name="string_buyfree">买赠</string>
    <string name="string_fullreduction">满减</string>
    <string name="string_fullgrowth">满赠</string>
    <string name="string_winemoneydeduction">酒币抵扣</string>
    <string name="string_moneyforwine">买酒送币</string>
    <string name="string_freefreight">免运费</string>
    <string name="string_add_shop">加入购物车</string>
    <string name="string_clear_shop">清空购物车</string>
    <string name="string_add_settlement">结算</string>
    <string name ="shouquan_address">未授权定位服务</string>
    <string name="wel_toast">温馨提示</string>
    <string name="wel_login">同意</string>
    <string name="wel_refause">不同意并退出</string>
    <string name="wel_msg">京东酒世界隐私政策，京东酒世界隐私政策，京 东酒世界隐私政策京东酒世界隐私政策京东，酒 世界隐私政策，京东酒世界隐私政策，京东酒世 界隐私政策京东酒世界隐私政策，京东酒世界隐 私政策，京东酒世界隐私政策京东酒世界隐私政 策京东，酒世界隐私政策，京东酒世界隐私政策 京东酒世界隐私政策京东酒世界隐私政策，京东 东酒世界隐私政策，京东酒世界隐私政策京东酒 世界隐私政策京东，酒世界隐私政策，京东酒世 界隐私政策，京东酒世界隐私政策京东酒世界隐 私政策，京东酒世界隐私政策，京京东酒世界隐 东酒世界隐私政策京东酒世界隐私政策京东，酒 世界隐私政策，京东酒世界隐私政策，京东酒世 界隐私政策京东酒世界隐私政策，京东酒世界隐 私政策，京东酒世界隐私政策京东酒世界隐私政 策京东，酒世界隐私政策，京东酒世界隐私政策 京东酒世界隐私政策。</string>
    <string name="login_receive">我们监测到您是已有历史订单的京东用户， 为验证您的账户安全，请输入历史收货人 进行校验。（任意一个即可）</string>
    <string name="wel_receive_hint">请输入历史收货人名称</string>
    <string name="order_login">登陆后才能查看订单</string>
    <string name="order_login_now">立即登陆</string>
    <string name ="string_rece_man">收货人</string>
    <string name ="string_rece_phone">联系电话</string>
    <string name ="string_rece_address">地址</string>
    <string name ="string_rece_info">补充说明</string>
    <string name ="string_rece_mark">标签</string>
    <string name ="string_have_no_goods">没有找到相关商品\n换个词试试吧</string>
    <string name ="string_all_choose">全选</string>
    <string name ="string_account">去结算</string>
    <string name ="string_choose_address">选择收货地址</string>
    <string name ="string_add_new_address">新增地址</string>
    <string name="string_open_city">已开通29分钟送达城市</string>
    <string name="string_next_city">很抱歉，此收货地址未开通29分钟送达服务</string>
    <string name="string_next_city1">附近支持自提购买服务门店</string>
</resources>
