<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ffffff"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_190"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dp_200"
            android:layout_height="@dimen/dp_200"
            android:scaleType="centerCrop"
            android:src="@mipmap/home_local" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/home_local_refuse"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/sp_15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_3"
            android:text="@string/home_local_set"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_local_msg"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/sp_12" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lay_tv_manual"
                android:layout_width="@dimen/dp_111"
                android:layout_height="@dimen/dp_35"
                android:layout_alignParentLeft="true"
                android:background="@drawable/style_radius_bg_red"
                android:gravity="center"
                android:text="@string/home_manual"
                android:textColor="@color/color_FF4E18"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/lay_tv_localstart"
                android:layout_width="@dimen/dp_111"
                android:layout_height="@dimen/dp_35"
                android:layout_alignParentRight="true"
                android:background="@drawable/style_radius_click_bg"
                android:gravity="center"
                android:text="@string/home_local_start"
                android:textColor="@color/color_ffffff"
                android:textSize="@dimen/sp_14" />

        </RelativeLayout>


    </LinearLayout>


</LinearLayout>
