<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_22"
        android:paddingRight="@dimen/dp_22">

        <EditText
            android:id="@+id/frag_et_account"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:digits="@string/phone_number"
            android:hint="@string/account_name"
            android:maxLength="11"
            android:textColor="@color/color_ff333333"
            android:textColorHint="@color/color_999999"
            android:textSize="@dimen/sp_15" />


        <ImageView
            android:id="@+id/frag_iv_accountdel"
            android:layout_width="@dimen/dp_17"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@mipmap/icon_del"
            android:visibility="gone" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginRight="@dimen/dp_22"
        android:background="@color/color_e2e2e2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_22"
        android:paddingRight="@dimen/dp_22">

        <EditText
            android:id="@+id/frag_et_pwd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:digits="@string/phone_number_pwd"
            android:hint="@string/account_pwd"
            android:inputType="textPassword"
            android:textColor="@color/color_ff333333"
            android:textColorHint="@color/color_999999"
            android:textSize="@dimen/sp_15" />

        <ImageView
            android:id="@+id/frag_iv_pwddel"
            android:layout_width="@dimen/dp_17"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@mipmap/icon_del"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/frag_iv_pwdsee"
            android:layout_width="@dimen/dp_17"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_31"
            android:layout_marginRight="@dimen/dp_6"
            android:scaleType="fitCenter"
            android:src="@mipmap/icon_nosee"
            android:tag="@string/tag_no" />

        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="@dimen/dp_22"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/dp_15"
            android:background="@color/color_e2e2e2" />

        <TextView
            android:id="@+id/frag_tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:text="@string/forget_password"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/sp_13" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginRight="@dimen/dp_22"
        android:background="@color/color_e2e2e2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp_21"
        android:paddingRight="@dimen/dp_22">

        <LinearLayout
            android:id="@+id/frag_ll_isagree"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_22">

            <ImageView
                android:id="@+id/frag_iv_isagree"
                android:layout_width="@dimen/dp_12"
                android:layout_height="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_2"
                android:scaleType="centerCrop"
                android:src="@mipmap/icon_no_select"
                android:tag="@string/tag_no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/frag_tv_isagree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/dp_2"
                android:gravity="center"
                android:text="@string/account_no_registmsg"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/sp_11" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/frag_tv_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginTop="@dimen/dp_47"
        android:layout_marginRight="@dimen/dp_23"
        android:background="@drawable/style_radius_bg_4df80000"
        android:gravity="center"
        android:text="@string/act_login_submit"
        android:textColor="#ffffff"
        android:textSize="@dimen/sp_15" />

</LinearLayout>
