<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/welcome"
    tools:context="com.runjing.MainActivity">


    <LinearLayout
        android:id="@+id/act_ll_agree"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_66000000"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="@dimen/dp_290"
            android:layout_height="@dimen/dp_440"
            android:background="@drawable/style_radius_bg_ffdbdbdb"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:gravity="center"
                android:text="@string/wel_toast"
                android:textColor="@color/color_FF000000"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_30"
                android:gravity="left"
                android:text="@string/wel_msg"
                android:textColor="@color/color_FF333333"
                android:textSize="@dimen/sp_11" />


            <TextView
                android:id="@+id/act_tv_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_35"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:background="@drawable/style_radius_click_bg"
                android:gravity="center"
                android:text="@string/wel_login"
                android:textColor="@color/color_ffffff"
                android:textSize="@dimen/sp_18" />


            <TextView
                android:id="@+id/act_tv_refause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:gravity="center"
                android:text="@string/wel_refause"
                android:textColor="@color/color_FF666666"
                android:textSize="@dimen/sp_14" />


        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
