<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/ll_bg"
        android:layout_width="@dimen/dp_270"
        android:layout_height="wrap_content"
        android:background="@drawable/style_radius_bg_ffffff"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_112"
            android:layout_alignParentTop="true"
            android:background="@mipmap/bg_receive">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_10"
                android:gravity="center"
                android:text="@string/login_receive"
                android:textColor="@color/color_ffffff"
                android:textSize="@dimen/sp_13" />

        </LinearLayout>

        <EditText
            android:id="@+id/et_input"
            android:layout_width="@dimen/dp_230"
            android:layout_height="@dimen/dp_44"
            android:layout_below="@+id/act_ll_top"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@drawable/style_radius_bg_ffffff"
            android:gravity="center"
            android:hint="@string/wel_receive_hint"
            android:padding="@dimen/dp_3"
            android:singleLine="true"
            android:textColor="@color/color_e8e8e8"
            android:textSize="@dimen/sp_18" />


        <ImageView
            android:id="@+id/iv_line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@color/popupwindow_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_neg"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:layout_weight="1"
                android:background="@drawable/selector_pop_middle"
                android:gravity="center"
                android:text="@string/dialog_left_botton"
                android:textColor="@color/color_333333"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/img_line"
                android:layout_width="0.5dp"
                android:layout_height="43dp"
                android:background="@color/popupwindow_line" />

            <Button
                android:id="@+id/btn_pos"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:layout_weight="1"
                android:background="@drawable/selector_pop_middle"
                android:gravity="center"
                android:text="@string/dialog_right_botton"
                android:textColor="@color/color_F80000"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>